Remove usage of Java 21-only API